--- a/pegboard/index.html
+++ b/pegboard/index.html
@@ -5,10 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>pegboard</title>
 		<script src="../libraries/p5.js"></script>
+		<script src="../libraries/resizeNN.js"></script>
 		<!-- <script src="../libraries/p5.sound.js"></script> -->
 		<script src="sketch.js"></script>
 		<script src="pegboard.js"></script>
-		<script src="spelling.js"></script>
+		<!-- <script src="animations/spelling.js"></script> -->
+		<script src="animations/ball.js"></script>
 		<style>
 			
 		</style>
