deadend on speedup

--- a/pegboard/index.html
+++ b/pegboard/index.html
@@ -10,8 +10,8 @@
 
     <!-- <script src="../libraries/p5.sound.js"></script> -->
 
-    <!-- <script src="sketch.js"></script> -->
-    <!-- <script src="pegboard.js"></script> -->
+    <!-- <script src="sketch.js"></script>
+    <script src="pegboard.js"></script> -->
     <!-- <script src="animations/spelling.js"></script> -->
     <!-- <script src="animations/ball.js"></script> -->
     <!-- <script src="animations/ball_bats.js"></script> -->
