added spelling game

--- a/spelling.html
+++ b/spelling.html
@@ -12,11 +12,8 @@
 
     <script src="sketch.js"></script>
     <script src="src/pegboard.js"></script>
-
     <script src="src/analog_pegs.js"></script>
-    <!-- <script src="animations/spelling.js"></script> -->
-    <!-- <script src="animations/ball.js"></script> -->
-    <script src="animations/ball_cannon.js"></script>
+    <script src="animations/spelling.js"></script>
     <style></style>
   </head>
   <body></body>
