--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <script src="test_class.js"></script>
     <script src="test_animation.js"></script>
     <script src="test_sketch.js"></script> -->
+    <script src="src/pegboard.js"></script>
+    <script src="src/analog_pegs.js"></script>
     <script src="sketch.js"></script>
-    <script src="pegboard.js"></script>
     <!-- <script src="animations/spelling.js"></script> -->
     <!-- <script src="animations/ball.js"></script> -->
     <!-- <script src="animations/ball_cannon.js"></script> -->
@@ -33,7 +34,7 @@
         <a href="ball_bats.html">Ball Bats</a>
       </li>
       <li>
-        <a href="test/index.html">Ball Bats</a>
+        <a href="spelling.html">Spelling</a>
       </li>
     </ul>
   </body>
