added rope bounce game

--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
   </head>
   <body style="margin-top: 50px">
     <ul>
-      <li>
+      <!-- <li>
         <a href="ball_pings.html">Ball Pings</a>
+      </li> -->
+      <li>
+        <a href="ball_cannon.html">Balloon Pop!</a>
       </li>
       <li>
-        <a href="ball_cannon.html">Ball Cannon</a>
-      </li>
-      <li>
-        <a href="ball_bats.html">Ball Bats</a>
+        <a href="ball_bats.html">Balloon Bop!</a>
       </li>
       <li>
         <a href="spelling.html">Spelling</a>
+      </li>
+      <li>
+        <a href="bubble_bounce.html">Bubble Bounce</a>
       </li>
     </ul>
   </body>
