--- a/test.html
+++ b/test.html
@@ -13,5 +13,6 @@
     <script src="test.js"></script>
     <style></style>
   </head>
-  <body></body>
+  <!-- set the background color to black -->
+      <body style="background-color: black"></body>
 </html>
