--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
     <!-- <script src="animations/ball.js"></script> -->
     <!-- <script src="animations/ball_cannon.js"></script> -->
 
-    <style></style>
+    <!-- add bootstrap boilerplate -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body style="margin-top: 50px">
+<body>
     <ul>
       <!-- <li>
         <a href="ball_pings.html">Ball Pings</a>
@@ -43,9 +48,6 @@
       </li>
       <li>
         <a href="ambiance.html">Ambiance</a>
-      </li>
-      <li>
-        <a href="test.html">test</a>
       </li>
     </ul>
       <div id="thumbnails-container"></div>
