Added Braille functionality to spelling_braille, broke everything else

--- a/animationpages/ball_bats.html
+++ b/animationpages/ball_bats.html
@@ -8,13 +8,11 @@
     <script src="../libraries/p5play.min.js"></script>
     <script src="../libraries/planck.min.js"></script>
 
-    <!-- <script src="../libraries/p5.sound.js"></script> -->
-
-    <script src="sketch.js"></script>
-    <script src="src/pegboard.js"></script>
-    <script src="src/analog_pegs.js"></script>
-    <script src="animations/ball_bats.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="../sketch.js"></script>
+    <script src="../src/pegboard.js"></script>
+    <script src="../src/analog_pegs.js"></script>
+    <script src="../animations/ball_bats.js"></script>
+  <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 <body></body>
 </html>
