--- a/animationpages/spelling_braille.html
+++ b/animationpages/spelling_braille.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pegboard</title>
+    <title>Spelling Challenge - braille
+    
+    </title>
     <script src="../libraries/p5.js"></script>
     <script src="../libraries/p5play.min.js"></script>
     <script src="../libraries/planck.min.js"></script>
 
-    <!-- <script src="../libraries/p5.sound.js"></script> -->
 
-    <script src="sketch.js"></script>
-    <script src="src/pegboard.js"></script>
-    <script src="src/analog_pegs.js"></script>
-    <script src="animations/bubble_bounce.js"></script>
+    <script src="../sketch.js"></script>
+    <script src="../src/pegboard.js"></script>
+    <script src="../animations/spelling_braille.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <!-- link to style.css -->
+  <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 <body></body>
 </html>
