--- a/animationpages/ball_cannon.html
+++ b/animationpages/ball_cannon.html
@@ -8,16 +8,15 @@
     <script src="../libraries/p5play.min.js"></script>
     <script src="../libraries/planck.min.js"></script>
 
-    <!-- <script src="../libraries/p5.sound.js"></script> -->
 
-    <script src="sketch.js"></script>
-    <script src="src/pegboard.js"></script>
-    <script src="src/analog_pegs.js"></script>
-    <script src="animations/ball_cannon.js"></script>
+    <script src="../sketch.js"></script>
+    <script src="../src/pegboard.js"></script>
+    <script src="../src/analog_pegs.js"></script>
+    <script src="../animations/ball_cannon.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 <body></body>
 </html>
