--- a/animationpages/ball_pings.html
+++ b/animationpages/ball_pings.html
@@ -8,18 +8,15 @@
 		<script src="../libraries/p5play.min.js"></script>
 		<script src="../libraries/planck.min.js"></script>
 
-		<!-- <script src="../libraries/p5.sound.js"></script> -->
 
-		<script src="sketch.js"></script>
-		<script src="pegboard.js"></script>
-		<!-- <script src="animations/spelling.js"></script> -->
-		<script src="animations/ball.js"></script>
-		<!-- <script src="animations/ball_bats.js"></script> -->
+		<script src="../sketch.js"></script>
+		<script src="../pegboard.js"></script>
+		<script src="../animations/ball.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 <body></body>
 </html>
