--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@
         <a href="ball_pings.html">Ball Pings</a>
       </li> -->
       <li>
-        <a href="ball_cannon.html">Balloon Pop!</a>
+        <a href="animationpages/ball_cannon.html">Balloon Pop!</a>
       </li>
       <li>
-        <a href="ball_bats.html">Balloon Bop!</a>
+        <a href="animationpages/ball_bats.html">Balloon Bop!</a>
       </li>
       <li>
-        <a href="spelling.html">Spelling</a>
+        <a href="animationpages/spelling.html">Spelling</a>
       </li>
       <li>
-        <a href="bubble_bounce.html">Bubble Bounce</a>
+        <a href="animationpages/spelling_braille.html">Spelling, Braille Version</a>
       </li>
       <li>
-        <a href="ambiance.html">Ambiance</a>
+        <a href="animationpages/bubble_bounce.html">Bubble Bounce</a>
+      </li>
+      <li>
+        <a href="animationpages/ambiance.html">Ambiance</a>
       </li>
     </ul>
       <div id="thumbnails-container"></div>
